--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <section class="hero is-primary">
         <div class="hero-body">
           <p class="title">
-            Welcome to Doggy's!
+            Welcome to Random Dog's Images
           </p>
           <p class="subtitle">
-            Doggy's website for dog lover.
+            website for dog lover get random dog images .
           </p>
         </div>
       </section>
